# cmake_playground_with_current

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
src/: hw1.cc  hw1_name.h  hw2.cc  hw3.cc  hw4.cc  lib_hw4_name.cc  lib_hw4_name.h
